@@ -5,6 +5,9 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2024/05/17:
+- TestEngine: Fixes calling ImGuiTestEngine_QueueTests() with NULL filter.
+
 2024/05/16:
 - TestEngine: Fixes/support for 1.90.7 swapping Ctrl<>Cmd on Mac OSX,
   and ImGuiMod_Shortcut being made obsolete/unnecessary.
